--- a/x86_64.config
+++ b/x86_64.config
@@ -1,7 +1,6 @@
 CONFIG_TARGET_x86=y
 CONFIG_TARGET_x86_64=y
 CONFIG_TARGET_x86_64_DEVICE_generic=y
-CONFIG_KSMBD_SMB_INSECURE_SERVER=y
 CONFIG_NGINX_HEADERS_MORE=y
 CONFIG_NGINX_HTTP_ACCESS=y
 CONFIG_NGINX_HTTP_AUTH_BASIC=y
@@ -34,13 +33,13 @@ CONFIG_NGINX_HTTP_V2=y
 CONFIG_NGINX_NAXSI=y
 CONFIG_NGINX_PCRE=y
 CONFIG_NGINX_UBUS=y
-CONFIG_OPENSSH_LIBFIDO2=y
-CONFIG_PACKAGE_6in4=y
 CONFIG_PACKAGE_TAR_BZIP2=y
 CONFIG_PACKAGE_TAR_GZIP=y
 CONFIG_PACKAGE_TAR_XZ=y
 CONFIG_PACKAGE_TAR_ZSTD=y
+# CONFIG_PACKAGE_attr is not set
 # CONFIG_PACKAGE_autosamba is not set
+# CONFIG_PACKAGE_avahi-dbus-daemon is not set
 CONFIG_PACKAGE_bash=y
 CONFIG_PACKAGE_bzip2=y
 CONFIG_PACKAGE_chinadns-ng=y
@@ -49,26 +48,23 @@ CONFIG_PACKAGE_coreutils-base64=y
 CONFIG_PACKAGE_coreutils-nohup=y
 CONFIG_PACKAGE_coreutils-stat=y
 CONFIG_PACKAGE_coreutils-stty=y
-CONFIG_PACKAGE_coreutils-timeout=y
+# CONFIG_PACKAGE_dbus is not set
 CONFIG_PACKAGE_dns2socks=y
 CONFIG_PACKAGE_dns2tcp=y
 CONFIG_PACKAGE_frpc=y
+# CONFIG_PACKAGE_grub2 is not set
+# CONFIG_PACKAGE_grub2-bios-setup is not set
+# CONFIG_PACKAGE_grub2-efi is not set
 CONFIG_PACKAGE_haproxy=y
-CONFIG_PACKAGE_ip6tables=y
 CONFIG_PACKAGE_ipt2socks=y
 CONFIG_PACKAGE_iptables-mod-conntrack-extra=y
 CONFIG_PACKAGE_iptables-mod-iprange=y
 CONFIG_PACKAGE_iptables-mod-socket=y
-CONFIG_PACKAGE_ipv6helper=y
 CONFIG_PACKAGE_kmod-crypto-ccm=y
 CONFIG_PACKAGE_kmod-crypto-cmac=y
 CONFIG_PACKAGE_kmod-crypto-ctr=y
 CONFIG_PACKAGE_kmod-crypto-des=y
-CONFIG_PACKAGE_kmod-crypto-gcm=y
-CONFIG_PACKAGE_kmod-crypto-gf128=y
-CONFIG_PACKAGE_kmod-crypto-ghash=y
 CONFIG_PACKAGE_kmod-crypto-hmac=y
-CONFIG_PACKAGE_kmod-crypto-md4=y
 CONFIG_PACKAGE_kmod-crypto-md5=y
 CONFIG_PACKAGE_kmod-crypto-rng=y
 CONFIG_PACKAGE_kmod-crypto-seqiv=y
@@ -76,41 +72,32 @@ CONFIG_PACKAGE_kmod-crypto-sha256=y
 CONFIG_PACKAGE_kmod-crypto-sha512=y
 CONFIG_PACKAGE_kmod-dnsresolver=y
 CONFIG_PACKAGE_kmod-fs-cifs=y
-CONFIG_PACKAGE_kmod-fs-ksmbd=y
 CONFIG_PACKAGE_kmod-fs-smbfs-common=y
-CONFIG_PACKAGE_kmod-inet-diag=y
-CONFIG_PACKAGE_kmod-ip6tables=y
 CONFIG_PACKAGE_kmod-ipt-conntrack-extra=y
 CONFIG_PACKAGE_kmod-ipt-iprange=y
-CONFIG_PACKAGE_kmod-ipt-nat6=y
-CONFIG_PACKAGE_kmod-ipt-offload=y
 CONFIG_PACKAGE_kmod-ipt-socket=y
-CONFIG_PACKAGE_kmod-iptunnel=y
-CONFIG_PACKAGE_kmod-iptunnel4=y
-CONFIG_PACKAGE_kmod-netlink-diag=y
-CONFIG_PACKAGE_kmod-nf-flow=y
-CONFIG_PACKAGE_kmod-nf-ipt6=y
-CONFIG_PACKAGE_kmod-nf-log6=y
-CONFIG_PACKAGE_kmod-nf-nat6=y
-CONFIG_PACKAGE_kmod-nf-reject6=y
 CONFIG_PACKAGE_kmod-nf-socket=y
 CONFIG_PACKAGE_kmod-oid-registry=y
-# CONFIG_PACKAGE_kmod-shortcut-fe is not set
-# CONFIG_PACKAGE_kmod-shortcut-fe-cm is not set
-CONFIG_PACKAGE_kmod-sit=y
-CONFIG_PACKAGE_ksmbd-server=y
-CONFIG_PACKAGE_libaio=y
+# CONFIG_PACKAGE_libattr is not set
+# CONFIG_PACKAGE_libavahi-client is not set
+# CONFIG_PACKAGE_libavahi-dbus-support is not set
 CONFIG_PACKAGE_libbz2=y
-CONFIG_PACKAGE_libcbor=y
-CONFIG_PACKAGE_libfido2=y
+# CONFIG_PACKAGE_libdaemon is not set
+# CONFIG_PACKAGE_libdbus is not set
+# CONFIG_PACKAGE_libexpat is not set
+# CONFIG_PACKAGE_libgmp is not set
+# CONFIG_PACKAGE_libgnutls is not set
 CONFIG_PACKAGE_libltdl=y
 CONFIG_PACKAGE_liblua5.3=y
 CONFIG_PACKAGE_liblzma=y
 CONFIG_PACKAGE_libminiupnpc=y
 CONFIG_PACKAGE_libnatpmp=y
-CONFIG_PACKAGE_libnl-core=y
-CONFIG_PACKAGE_libnl-genl=y
+# CONFIG_PACKAGE_libnettle is not set
+# CONFIG_PACKAGE_libpopt is not set
 CONFIG_PACKAGE_libstdcpp=y
+# CONFIG_PACKAGE_libtasn1 is not set
+# CONFIG_PACKAGE_libtirpc is not set
+# CONFIG_PACKAGE_liburing is not set
 CONFIG_PACKAGE_libuv=y
 CONFIG_PACKAGE_libwebsockets-full=y
 CONFIG_PACKAGE_libzstd=y
@@ -119,10 +106,8 @@ CONFIG_PACKAGE_luci-app-cifs-mount=y
 # CONFIG_PACKAGE_luci-app-ddns is not set
 CONFIG_PACKAGE_luci-app-frpc=y
 CONFIG_PACKAGE_luci-app-mosdns=y
-CONFIG_PACKAGE_luci-app-netdata=y
 CONFIG_PACKAGE_luci-app-passwall=y
 CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Haproxy=y
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_SingBox=y
 CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Xray=y
 CONFIG_PACKAGE_luci-app-passwall_Iptables_Transparent_Proxy=y
 CONFIG_PACKAGE_luci-app-ramfree=y
@@ -131,14 +116,12 @@ CONFIG_PACKAGE_luci-app-ramfree=y
 # CONFIG_PACKAGE_luci-app-samba4 is not set
 CONFIG_PACKAGE_luci-app-store=y
 CONFIG_PACKAGE_luci-app-ttyd=y
-CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_OFFLOADING=y
 # CONFIG_PACKAGE_luci-app-unblockmusic_INCLUDE_UnblockNeteaseMusic_Go is not set
 CONFIG_PACKAGE_luci-app-wrtbwmon=y
 CONFIG_PACKAGE_luci-app-zerotier=y
 CONFIG_PACKAGE_luci-i18n-cifs-mount-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-frpc-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-mosdns-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-netdata-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-passwall-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-ramfree-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-ttyd-zh-cn=y
@@ -154,24 +137,15 @@ CONFIG_PACKAGE_microsocks=y
 CONFIG_PACKAGE_mosdns=y
 CONFIG_PACKAGE_mount-utils=y
 CONFIG_PACKAGE_nano=y
-CONFIG_PACKAGE_netdata=y
 CONFIG_PACKAGE_nginx=y
 CONFIG_PACKAGE_nginx-mod-luci=y
 CONFIG_PACKAGE_nginx-ssl=y
 CONFIG_PACKAGE_nginx-ssl-util=y
 CONFIG_PACKAGE_nginx-util=y
-CONFIG_PACKAGE_odhcp6c=y
-CONFIG_PACKAGE_odhcp6c_ext_cer_id=0
-CONFIG_PACKAGE_odhcpd-ipv6only=y
-CONFIG_PACKAGE_odhcpd_ipv6only_ext_cer_id=0
-CONFIG_PACKAGE_openssh-keygen=y
-CONFIG_PACKAGE_openssh-server=y
-CONFIG_PACKAGE_openssh-sftp-server=y
 CONFIG_PACKAGE_resolveip=y
 # CONFIG_PACKAGE_samba4-libs is not set
 # CONFIG_PACKAGE_samba4-server is not set
 CONFIG_PACKAGE_script-utils=y
-CONFIG_PACKAGE_sing-box=y
 CONFIG_PACKAGE_tar=y
 CONFIG_PACKAGE_taskd=y
 CONFIG_PACKAGE_tcping=y
@@ -184,66 +158,30 @@ CONFIG_PACKAGE_uwsgi-syslog-plugin=y
 CONFIG_PACKAGE_v2dat=y
 CONFIG_PACKAGE_v2ray-geoip=y
 CONFIG_PACKAGE_v2ray-geosite=y
+# CONFIG_PACKAGE_wsdd2 is not set
 CONFIG_PACKAGE_xray-core=y
 CONFIG_PACKAGE_xz=y
 CONFIG_PACKAGE_xz-utils=y
 CONFIG_PACKAGE_zerotier=y
-CONFIG_SING_BOX_WITH_CLASH_API=y
-CONFIG_SING_BOX_WITH_DHCP=y
-CONFIG_SING_BOX_WITH_ECH=y
-CONFIG_SING_BOX_WITH_GVISOR=y
-CONFIG_SING_BOX_WITH_QUIC=y
-CONFIG_SING_BOX_WITH_UTLS=y
-CONFIG_SING_BOX_WITH_WIREGUARD=y
 # CONFIG_TARGET_IMAGES_GZIP is not set
-CONFIG_TARGET_INITRAMFS_COMPRESSION_NONE=y
-CONFIG_TARGET_ROOTFS_INITRAMFS=y
-CONFIG_TARGET_ROOTFS_PARTSIZE=240
+CONFIG_TARGET_ROOTFS_PARTSIZE=200
 # CONFIG_TARGET_ROOTFS_SQUASHFS is not set
 CONFIG_TARGET_ROOTFS_TARGZ=y
 CONFIG_ZSTD_OPTIMIZE_O3=y
-CONFIG_GNUTLS_ALPN=y
-CONFIG_GNUTLS_ANON=y
-# CONFIG_GNUTLS_CRYPTODEV is not set
-CONFIG_GNUTLS_DTLS_SRTP=y
-# CONFIG_GNUTLS_EXT_LIBTASN1 is not set
-CONFIG_GNUTLS_HEARTBEAT=y
-CONFIG_GNUTLS_OCSP=y
-# CONFIG_GNUTLS_PKCS11 is not set
-CONFIG_GNUTLS_PSK=y
-# CONFIG_GNUTLS_SRP is not set
-# CONFIG_GNUTLS_TPM is not set
-# CONFIG_LIBNETTLE_MINI is not set
-CONFIG_PACKAGE_attr=y
-CONFIG_PACKAGE_avahi-dbus-daemon=y
 # CONFIG_PACKAGE_boost is not set
-CONFIG_PACKAGE_dbus=y
-CONFIG_PACKAGE_grub2=y
-CONFIG_PACKAGE_grub2-bios-setup=y
-CONFIG_PACKAGE_grub2-efi=y
-CONFIG_PACKAGE_libattr=y
-CONFIG_PACKAGE_libavahi-client=y
-CONFIG_PACKAGE_libavahi-dbus-support=y
+# CONFIG_PACKAGE_kmod-inet-diag is not set
+# CONFIG_PACKAGE_kmod-netlink-diag is not set
 # CONFIG_PACKAGE_libcares is not set
-CONFIG_PACKAGE_libdaemon=y
-CONFIG_PACKAGE_libdbus=y
 # CONFIG_PACKAGE_libev is not set
-CONFIG_PACKAGE_libexpat=y
-CONFIG_PACKAGE_libgmp=y
-CONFIG_PACKAGE_libgnutls=y
 # CONFIG_PACKAGE_libmbedtls is not set
-CONFIG_PACKAGE_libnettle=y
 # CONFIG_PACKAGE_libpcre2 is not set
-CONFIG_PACKAGE_libpopt=y
 # CONFIG_PACKAGE_libsodium is not set
-CONFIG_PACKAGE_libtasn1=y
-CONFIG_PACKAGE_libtirpc=y
 # CONFIG_PACKAGE_libudns is not set
-CONFIG_PACKAGE_liburing=y
 # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ShadowsocksR_Libev_Client is not set
 # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Libev_Client is not set
 # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Libev_Server is not set
 # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Simple_Obfs is not set
+# CONFIG_PACKAGE_luci-app-passwall_INCLUDE_SingBox is not set
 # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Trojan_Plus is not set
 # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray_Plugin is not set
 # CONFIG_PACKAGE_shadowsocks-libev-ss-local is not set
@@ -252,5 +190,6 @@ CONFIG_PACKAGE_liburing=y
 # CONFIG_PACKAGE_shadowsocksr-libev-ssr-local is not set
 # CONFIG_PACKAGE_shadowsocksr-libev-ssr-redir is not set
 # CONFIG_PACKAGE_simple-obfs is not set
+# CONFIG_PACKAGE_sing-box is not set
 # CONFIG_PACKAGE_trojan-plus is not set
 # CONFIG_PACKAGE_v2ray-plugin is not set
