--- a/.github/workflows/Build_OP_x86_64.yml
+++ b/.github/workflows/Build_OP_x86_64.yml
@@ -103,7 +103,7 @@ jobs:
       uses: actions/upload-artifact@master
       with:
         name: lede_x86_64_${{ env.FILE_DATE }}
-        path: openwrt/bin
+        path: openwrt/bin/targets
 
     - name: Delete workflow runs
       uses: Mattraks/delete-workflow-runs@main
