--- a/.github/workflows/Build_OP_Newifi_D2.yml
+++ b/.github/workflows/Build_OP_Newifi_D2.yml
@@ -54,8 +54,8 @@ jobs:
       run: |
         ./scripts/feeds update -a
         ./scripts/feeds install -a
-        #rm -rf ./feeds/packages/lang/golang
-        #git clone https://github.com/sbwml/packages_lang_golang -b 22.x ./feeds/packages/lang/golang
+        rm -rf feeds/packages/lang/golang
+        git clone https://github.com/sbwml/packages_lang_golang -b 22.x feeds/packages/lang/golang
     
     #- name: Import external feeds - JerryKuKu Argon
     #  working-directory: ./openwrt
