--- a/.github/workflows/Build_OP_Newifi_D2_lienol.yml
+++ b/.github/workflows/Build_OP_Newifi_D2_lienol.yml
@@ -92,7 +92,7 @@ jobs:
     - name : Upload artifact
       uses: actions/upload-artifact@master
       with:
-        name: lede_newifi_d2_lienol_${{ env.FILE_DATE }}
+        name: lienol_newifi_d2_${{ env.FILE_DATE }}
         path: openwrt/bin/targets
 
     - name: Delete workflow runs
