--- a/x86_64.config
+++ b/x86_64.config
@@ -230,3 +230,9 @@ CONFIG_PACKAGE_kmod-shortcut-fe-cm=y
 # CONFIG_PACKAGE_simple-obfs is not set
 # CONFIG_PACKAGE_trojan-plus is not set
 # CONFIG_PACKAGE_v2ray-plugin is not set
+CONFIG_PACKAGE_libminiupnpc=y
+CONFIG_PACKAGE_libnatpmp=y
+CONFIG_PACKAGE_libstdcpp=y
+CONFIG_PACKAGE_luci-app-zerotier=y
+CONFIG_PACKAGE_luci-i18n-zerotier-zh-cn=y
+CONFIG_PACKAGE_zerotier=y
