--- a/x86_64.config
+++ b/x86_64.config
@@ -4,6 +4,7 @@ CONFIG_TARGET_x86_64_DEVICE_generic=y
 CONFIG_PACKAGE_bash=y
 CONFIG_PACKAGE_blockd=y
 CONFIG_PACKAGE_chinadns-ng=y
+CONFIG_PACKAGE_cloudflared=y
 CONFIG_PACKAGE_coreutils=y
 CONFIG_PACKAGE_coreutils-base64=y
 CONFIG_PACKAGE_coreutils-nohup=y
@@ -71,6 +72,7 @@ CONFIG_SING_BOX_WITH_QUIC=y
 CONFIG_SING_BOX_WITH_UTLS=y
 CONFIG_SING_BOX_WITH_WIREGUARD=y
 # CONFIG_TARGET_IMAGES_GZIP is not set
+CONFIG_TARGET_ROOTFS_PARTSIZE=600
 # CONFIG_TARGET_ROOTFS_SQUASHFS is not set
 CONFIG_TARGET_ROOTFS_TARGZ=y
 # CONFIG_PACKAGE_libcares is not set
