--- a/x86_64.config
+++ b/x86_64.config
@@ -1,6 +1,38 @@
 CONFIG_TARGET_x86=y
 CONFIG_TARGET_x86_64=y
 CONFIG_TARGET_x86_64_DEVICE_generic=y
+CONFIG_NGINX_HEADERS_MORE=y
+CONFIG_NGINX_HTTP_ACCESS=y
+CONFIG_NGINX_HTTP_AUTH_BASIC=y
+CONFIG_NGINX_HTTP_AUTOINDEX=y
+CONFIG_NGINX_HTTP_BROWSER=y
+CONFIG_NGINX_HTTP_CACHE=y
+CONFIG_NGINX_HTTP_CHARSET=y
+CONFIG_NGINX_HTTP_EMPTY_GIF=y
+CONFIG_NGINX_HTTP_FASTCGI=y
+CONFIG_NGINX_HTTP_GEO=y
+CONFIG_NGINX_HTTP_GZIP=y
+CONFIG_NGINX_HTTP_GZIP_STATIC=y
+CONFIG_NGINX_HTTP_LIMIT_CONN=y
+CONFIG_NGINX_HTTP_LIMIT_REQ=y
+CONFIG_NGINX_HTTP_MAP=y
+CONFIG_NGINX_HTTP_MEMCACHED=y
+CONFIG_NGINX_HTTP_PROXY=y
+CONFIG_NGINX_HTTP_REFERER=y
+CONFIG_NGINX_HTTP_REWRITE=y
+CONFIG_NGINX_HTTP_SCGI=y
+CONFIG_NGINX_HTTP_SPLIT_CLIENTS=y
+CONFIG_NGINX_HTTP_SSI=y
+CONFIG_NGINX_HTTP_UPSTREAM_HASH=y
+CONFIG_NGINX_HTTP_UPSTREAM_IP_HASH=y
+CONFIG_NGINX_HTTP_UPSTREAM_KEEPALIVE=y
+CONFIG_NGINX_HTTP_UPSTREAM_LEAST_CONN=y
+CONFIG_NGINX_HTTP_USERID=y
+CONFIG_NGINX_HTTP_UWSGI=y
+CONFIG_NGINX_HTTP_V2=y
+CONFIG_NGINX_NAXSI=y
+CONFIG_NGINX_PCRE=y
+CONFIG_NGINX_UBUS=y
 CONFIG_PACKAGE_bash=y
 CONFIG_PACKAGE_blockd=y
 CONFIG_PACKAGE_chinadns-ng=y
@@ -10,9 +42,6 @@ CONFIG_PACKAGE_coreutils-nohup=y
 CONFIG_PACKAGE_dns2socks=y
 CONFIG_PACKAGE_dns2tcp=y
 CONFIG_PACKAGE_frpc=y
-# CONFIG_PACKAGE_grub2 is not set
-# CONFIG_PACKAGE_grub2-bios-setup is not set
-# CONFIG_PACKAGE_grub2-efi is not set
 CONFIG_PACKAGE_haproxy=y
 CONFIG_PACKAGE_kmod-fs-autofs4=y
 CONFIG_PACKAGE_kmod-inet-diag=y
@@ -21,7 +50,6 @@ CONFIG_PACKAGE_libltdl=y
 CONFIG_PACKAGE_liblua5.3=y
 CONFIG_PACKAGE_libminiupnpc=y
 CONFIG_PACKAGE_libnatpmp=y
-CONFIG_PACKAGE_libpcre2=y
 CONFIG_PACKAGE_libstdcpp=y
 CONFIG_PACKAGE_libuci-lua=y
 # CONFIG_PACKAGE_luci-app-accesscontrol is not set
@@ -47,14 +75,24 @@ CONFIG_PACKAGE_luci-i18n-passwall-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-passwall2-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-ramfree-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-zerotier-zh-cn=y
+CONFIG_PACKAGE_luci-nginx=y
 CONFIG_PACKAGE_luci-theme-argon=y
 CONFIG_PACKAGE_luci-theme-material=y
 CONFIG_PACKAGE_microsocks=y
 CONFIG_PACKAGE_mosdns=y
+CONFIG_PACKAGE_nginx=y
+CONFIG_PACKAGE_nginx-mod-luci=y
+CONFIG_PACKAGE_nginx-ssl=y
+CONFIG_PACKAGE_nginx-ssl-util=y
+CONFIG_PACKAGE_nginx-util=y
 CONFIG_PACKAGE_resolveip=y
 CONFIG_PACKAGE_sing-box=y
 CONFIG_PACKAGE_tcping=y
 CONFIG_PACKAGE_unzip=y
+CONFIG_PACKAGE_uwsgi=y
+CONFIG_PACKAGE_uwsgi-cgi-plugin=y
+CONFIG_PACKAGE_uwsgi-luci-support=y
+CONFIG_PACKAGE_uwsgi-syslog-plugin=y
 CONFIG_PACKAGE_v2dat=y
 CONFIG_PACKAGE_v2ray-geoip=y
 CONFIG_PACKAGE_v2ray-geosite=y
@@ -62,7 +100,6 @@ CONFIG_PACKAGE_v2ray-geosite=y
 # CONFIG_PACKAGE_vsftpd-alt is not set
 CONFIG_PACKAGE_xray-core=y
 CONFIG_PACKAGE_zerotier=y
-CONFIG_PCRE2_JIT_ENABLED=y
 CONFIG_SING_BOX_WITH_CLASH_API=y
 CONFIG_SING_BOX_WITH_DHCP=y
 CONFIG_SING_BOX_WITH_ECH=y
@@ -70,10 +107,9 @@ CONFIG_SING_BOX_WITH_GVISOR=y
 CONFIG_SING_BOX_WITH_QUIC=y
 CONFIG_SING_BOX_WITH_UTLS=y
 CONFIG_SING_BOX_WITH_WIREGUARD=y
-# CONFIG_TARGET_IMAGES_GZIP is not set
 CONFIG_TARGET_ROOTFS_PARTSIZE=600
-# CONFIG_TARGET_ROOTFS_SQUASHFS is not set
 CONFIG_TARGET_ROOTFS_TARGZ=y
+CONFIG_VMDK_IMAGES=y
 # CONFIG_PACKAGE_libcares is not set
 # CONFIG_PACKAGE_libev is not set
 # CONFIG_PACKAGE_libmbedtls is not set
