--- a/.github/workflows/Build_OP_x86_64.yml
+++ b/.github/workflows/Build_OP_x86_64.yml
@@ -59,7 +59,7 @@ jobs:
         ./scripts/feeds update -a
         ./scripts/feeds install -a
         rm -rf ./feeds/packages/lang/golang
-        git clone https://github.com/sbwml/packages_lang_golang -b 22.x ./feeds/packages/lang/golang
+    #    git clone https://github.com/sbwml/packages_lang_golang -b 22.x ./feeds/packages/lang/golang
 
     #- name: Import external feeds - passwall
     #  working-directory: ./openwrt
@@ -83,9 +83,11 @@ jobs:
         cd openwrt
         sed -i 's/\/bin\/ash/\/bin\/bash/' package/base-files/files/etc/passwd
         sed -i 's/$1$V4UetPzk$CYXluq4wUazHjmCDBCqXF.//g' package/lean/default-settings/files/zzz-default-settings
-        sed -i 's/192.168.1.1/192.168.5.2/g' package/base-files/files/bin/config_generate
-        sed -i 's/OpenWrt/Xiaomi/g' package/base-files/files/bin/config_generate
-        sed -i 's/luci-theme-bootstrap/luci-theme-argon-mod/g' feeds/luci/collections/luci/Makefile
+        #sed -i 's/192.168.1.1/192.168.5.2/g' package/base-files/files/bin/config_generate
+        #sed -i 's/OpenWrt/Xiaomi/g' package/base-files/files/bin/config_generate
+        sed -i 's/192.168.1.1/192.168.5.2/g' package/base-files/luci2/bin/config_generate
+        sed -i 's/OpenWrt/Xiaomi/g' package/base-files/luci2/bin/config_generate
+        #sed -i 's/luci-theme-bootstrap/luci-theme-argon-mod/g' feeds/luci/collections/luci/Makefile
 
         #curl -fsSL  https://raw.githubusercontent.com/sirpdboy/other/master/patch/poweroff/poweroff.htm > ./feeds/luci/modules/luci-mod-admin-full/luasrc/view/admin_system/poweroff.htm
         #curl -fsSL  https://raw.githubusercontent.com/sirpdboy/other/master/patch/poweroff/system.lua > ./feeds/luci/modules/luci-mod-admin-full/luasrc/controller/admin/system.lua
