--- a/.github/workflows/Build_OP_x86_64.yml
+++ b/.github/workflows/Build_OP_x86_64.yml
@@ -86,11 +86,13 @@ jobs:
         #sed -i 's/192.168.1.1/192.168.5.2/g' package/base-files/files/bin/config_generate
         #sed -i 's/OpenWrt/Xiaomi/g' package/base-files/files/bin/config_generate
         sed -i 's/192.168.1.1/192.168.5.2/g' package/base-files/luci2/bin/config_generate
-        sed -i 's/OpenWrt/Xiaomi/g' package/base-files/luci2/bin/config_generate
+        sed -i 's/OpenWrt/opwrt/g' package/base-files/luci2/bin/config_generate
         #sed -i 's/luci-theme-bootstrap/luci-theme-argon-mod/g' feeds/luci/collections/luci/Makefile
 
         #curl -fsSL  https://raw.githubusercontent.com/sirpdboy/other/master/patch/poweroff/poweroff.htm > ./feeds/luci/modules/luci-mod-admin-full/luasrc/view/admin_system/poweroff.htm
         #curl -fsSL  https://raw.githubusercontent.com/sirpdboy/other/master/patch/poweroff/system.lua > ./feeds/luci/modules/luci-mod-admin-full/luasrc/controller/admin/system.lua
+        curl -fsSL  https://raw.githubusercontent.com/sirpdboy/other/master/patch/poweroff/poweroff.htm > ./feeds/luci/modules/luci-mod-admin-mini/luasrc/view/mini/poweroff.htm
+        curl -fsSL  https://raw.githubusercontent.com/sirpdboy/other/master/patch/poweroff/system.lua > ./feeds/luci/modules/luci-mod-admin-mini/luasrc/controller/mini/system.lua
 
         
         make defconfig
