--- a/x86_64.config
+++ b/x86_64.config
@@ -53,6 +53,7 @@ CONFIG_PACKAGE_libnatpmp=y
 CONFIG_PACKAGE_libstdcpp=y
 CONFIG_PACKAGE_libuci-lua=y
 CONFIG_PACKAGE_nano=y
+CONFIG_PACKAGE_openssh-sftp-server=y
 CONFIG_PACKAGE_luci-app-store=y
 # CONFIG_PACKAGE_luci-app-accesscontrol is not set
 # CONFIG_PACKAGE_luci-app-ddns is not set
@@ -109,9 +110,9 @@ CONFIG_SING_BOX_WITH_GVISOR=y
 CONFIG_SING_BOX_WITH_QUIC=y
 CONFIG_SING_BOX_WITH_UTLS=y
 CONFIG_SING_BOX_WITH_WIREGUARD=y
-CONFIG_TARGET_ROOTFS_PARTSIZE=600
+CONFIG_TARGET_ROOTFS_PARTSIZE=200
 CONFIG_TARGET_ROOTFS_TARGZ=y
-CONFIG_VMDK_IMAGES=y
+#CONFIG_VMDK_IMAGES=y
 # CONFIG_PACKAGE_libcares is not set
 # CONFIG_PACKAGE_libev is not set
 # CONFIG_PACKAGE_libmbedtls is not set
